// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectorsSameLine.css - {"selectorsSameLine":false} format 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
selectorsSameLine: false
                                                                                | printWidth
=====================================input======================================
.h1,    .h2 {
    margin: 0%;
}
=====================================output=====================================
.h1,
.h2 {
  margin: 0%;
}

================================================================================
`;

exports[`selectorsSameLine.css - {"selectorsSameLine":true} format 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
selectorsSameLine: true
                                                                                | printWidth
=====================================input======================================
.h1,    .h2 {
    margin: 0%;
}
=====================================output=====================================
.h1, .h2 {
  margin: 0%;
}

================================================================================
`;
